Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 5.0.0, Qt Creator 5.0.2
-
-
a013d7572862cde46517d78c84c1a76be73eff66 (qt-creator/qt-creator/master)
Description
Incorrect code parsing opening closing brace indication is seen. Using following code
template<typename T>
void function(QList<std::shared_ptr<T>>&)
{
}
Attached is gif which shows this.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-26395 cannot match right parentheses when cursor on left parentheses
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-26400 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
377139,11 | CppEditor: Change parsing opposite bracket | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
378139,1 | CppEditor: Change parsing opposite bracket | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |