src/plugins/cppeditor/semantichighlighter.cpp
@@ -225,7 +225,7 @@ void SemanticHighlighter::onHighlighterResultAvailable(int from, int to)
         } else if (result.kind == DoubleAngleBracketClose) {
             Parenthesis extraParen = {Parenthesis::Closed, '>', result.column - 1};
             extraParen.source = parenSource();
-            parentheses.second.append(extraParen);
+            insertSorted(parentheses.second, extraParen);
             paren = {Parenthesis::Closed, '>', result.column};
         } else if (result.kind == TernaryIf) {
             paren = {Parenthesis::Opened, '?', result.column - 1};
